[package]
authors = [
  "Barugon <barugon@dungeonbox.net>",
  "Elias Kartashov <elias@lowenware.com>",
]
description = "File dialog window for egui"
edition = "2021"
keywords = ["file-dialog", "file-picker"]
license = "MIT"
name = "egui_file"
repository = "https://github.com/Barugon/egui_file"
version = "0.14.1"

[dependencies.egui]
version = "0.25"
